[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcache"
version = "0.2.0"
description = "Высокопроизводительная библиотека кэширования для Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "Maxximuss", email = "xxxmaxximussxxx@gmail.com"}
]

keywords = ["cache", "caching", "lru", "ttl", "async", "performance", "smartcache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/Maxximuss-hub/Smartcache"
"Bug Tracker" = "https://github.com/Maxximuss-hub/Smartcache/issues"
"Author Profile" = "https://github.com/Maxximuss-hub"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartcache*"]
exclude = ["tests*", "examples*"]